// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleListPage should render 20 cards and a create button and snapshot 1`] = `
<div>
  <div
    class="makeStyles-root-673"
  >
    <div
      aria-label="rule search bar"
      class="makeStyles-searchBar-674"
    >
      <div
        class="MuiPaper-root makeStyles-searchContainer-679 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiInputBase-root makeStyles-searchInput-680"
        >
          <input
            aria-label="search input"
            class="MuiInputBase-input"
            placeholder="Enter a rule name..."
            type="text"
            value=""
          />
        </div>
        <div
          aria-label="search icon"
          class="makeStyles-searchButton-681"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
      </div>
    </div>
    <button
      aria-label="add rule"
      class="MuiButtonBase-root MuiFab-root makeStyles-fabAddRule-676 MuiFab-primary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="makeStyles-gridCards-675"
    >
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarBlue-849 MuiAvatar-colorDefault"
            >
              S
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 0
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOn-845"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarRed-848 MuiAvatar-colorDefault"
            >
              H
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 1
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOff-846"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarOrange-851 MuiAvatar-colorDefault"
            >
              T
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 2
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOn-845"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarPurple-850 MuiAvatar-colorDefault"
            >
              R
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 3
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOff-846"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarBlue-849 MuiAvatar-colorDefault"
            >
              S
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 4
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOn-845"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarRed-848 MuiAvatar-colorDefault"
            >
              H
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 5
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOff-846"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarOrange-851 MuiAvatar-colorDefault"
            >
              T
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 6
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOn-845"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarPurple-850 MuiAvatar-colorDefault"
            >
              R
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 7
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOff-846"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarBlue-849 MuiAvatar-colorDefault"
            >
              S
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 8
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOn-845"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-837 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-838"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-847 makeStyles-ruleCardAvatarRed-848 MuiAvatar-colorDefault"
            >
              H
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 9
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-839"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-840"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-841"
          >
            <div
              class="makeStyles-ruleCardStatusDate-842"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-843"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-844 makeStyles-onShotLabelOff-846"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-emptyView-753"
      data-testid="empty-view-row"
    >
      <span
        class="MuiTypography-root makeStyles-emptyViewText-754 MuiTypography-caption MuiTypography-alignCenter"
      >
        You reached the end of the list!
      </span>
    </div>
  </div>
</div>
`;

exports[`RuleListPage should render Empty List when no elements and snap 1`] = `
<div>
  <div
    class="makeStyles-root-240"
  >
    <div
      aria-label="rule search bar"
      class="makeStyles-searchBar-241"
    >
      <div
        class="MuiPaper-root makeStyles-searchContainer-246 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiInputBase-root makeStyles-searchInput-247"
        >
          <input
            aria-label="search input"
            class="MuiInputBase-input"
            placeholder="Enter a rule name..."
            type="text"
            value=""
          />
        </div>
        <div
          aria-label="search icon"
          class="makeStyles-searchButton-248"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
      </div>
    </div>
    <button
      aria-label="add rule"
      class="MuiButtonBase-root MuiFab-root makeStyles-fabAddRule-243 MuiFab-primary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="makeStyles-gridCards-242"
    />
    <div
      class="makeStyles-emptyView-320"
      data-testid="empty-view-row"
    >
      <h4
        class="MuiTypography-root makeStyles-emptyViewText-321 MuiTypography-h4 MuiTypography-alignCenter"
      >
        There are not RULES created yet!
      </h4>
    </div>
  </div>
</div>
`;

exports[`RuleListPage should render End List message when no more elements to load and snap 1`] = `
<div>
  <div
    class="makeStyles-root-434"
  >
    <div
      aria-label="rule search bar"
      class="makeStyles-searchBar-435"
    >
      <div
        class="MuiPaper-root makeStyles-searchContainer-440 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiInputBase-root makeStyles-searchInput-441"
        >
          <input
            aria-label="search input"
            class="MuiInputBase-input"
            placeholder="Enter a rule name..."
            type="text"
            value=""
          />
        </div>
        <div
          aria-label="search icon"
          class="makeStyles-searchButton-442"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
      </div>
    </div>
    <button
      aria-label="add rule"
      class="MuiButtonBase-root MuiFab-root makeStyles-fabAddRule-437 MuiFab-primary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="makeStyles-gridCards-436"
    >
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarBlue-610 MuiAvatar-colorDefault"
            >
              S
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 0
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOn-606"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarRed-609 MuiAvatar-colorDefault"
            >
              H
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 1
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOff-607"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarOrange-612 MuiAvatar-colorDefault"
            >
              T
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 2
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOn-606"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarPurple-611 MuiAvatar-colorDefault"
            >
              R
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 3
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOff-607"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarBlue-610 MuiAvatar-colorDefault"
            >
              S
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 4
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOn-606"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarRed-609 MuiAvatar-colorDefault"
            >
              H
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 5
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOff-607"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarOrange-612 MuiAvatar-colorDefault"
            >
              T
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 6
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOn-606"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarPurple-611 MuiAvatar-colorDefault"
            >
              R
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 7
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOff-607"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarBlue-610 MuiAvatar-colorDefault"
            >
              S
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 8
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOn-606"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-label="element card rule"
        class="MuiPaper-root MuiCard-root makeStyles-ruleCard-598 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiCardHeader-root makeStyles-ruleCardHeader-599"
        >
          <div
            class="MuiCardHeader-avatar"
          >
            <div
              aria-label="recipe"
              class="MuiAvatar-root MuiAvatar-circle makeStyles-ruleCardAvatar-608 makeStyles-ruleCardAvatarRed-609 MuiAvatar-colorDefault"
            >
              H
            </div>
          </div>
          <div
            class="MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
            >
              Rule 9
            </span>
            <span
              class="MuiTypography-root MuiCardHeader-subheader MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
            >
              1/1/2020 11:10:10
            </span>
          </div>
          <div
            class="MuiCardHeader-action"
          >
            <button
              aria-label="settings"
              class="MuiButtonBase-root MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <hr
          class="MuiDivider-root"
        />
        <div
          class="makeStyles-ruleCardContent-600"
        >
          <div>
            Event Type 
            eventtypeid
          </div>
          <div>
            Target 
            eventtypeid
          </div>
          <div
            aria-label="rule filter elements"
            class="makeStyles-ruleCardFilters-601"
          >
            {"temperature":10}
          </div>
          <hr
            class="MuiDivider-root"
          />
          <div
            aria-label="rule status element"
            class="makeStyles-ruleCardStatus-602"
          >
            <div
              class="makeStyles-ruleCardStatusDate-603"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                1/1/2020
              </p>
            </div>
            <div
              class="makeStyles-ruleCardStatusOneShot-604"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Skip Consecutives
              </p>
              <div
                class="makeStyles-onShotLabel-605 makeStyles-onShotLabelOff-607"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-emptyView-514"
      data-testid="empty-view-row"
    >
      <span
        class="MuiTypography-root makeStyles-emptyViewText-515 MuiTypography-caption MuiTypography-alignCenter"
      >
        You reached the end of the list!
      </span>
    </div>
  </div>
</div>
`;

exports[`RuleListPage should render loading component 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      aria-label="rule search bar"
      class="makeStyles-searchBar-2"
    >
      <div
        class="MuiPaper-root makeStyles-searchContainer-7 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiInputBase-root makeStyles-searchInput-8"
        >
          <input
            aria-label="search input"
            class="MuiInputBase-input"
            placeholder="Enter a rule name..."
            type="text"
            value=""
          />
        </div>
        <div
          aria-label="search icon"
          class="makeStyles-searchButton-9"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
          </svg>
        </div>
      </div>
    </div>
    <button
      aria-label="add rule"
      class="MuiButtonBase-root MuiFab-root makeStyles-fabAddRule-4 MuiFab-primary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="makeStyles-gridCards-3"
    />
    <div
      class="makeStyles-loadingView-78"
      data-testid="loading-view-row"
    >
      <div
        class="MuiCircularProgress-root makeStyles-loadingSpinner-79 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
